--- a/nginxTemplate.tmpl
+++ b/nginxTemplate.tmpl
@@ -1,3 +1,4 @@
+load_module /usr/lib/nginx/modules/ngx_stream_module.so;
 worker_processes  1;
 
 events {
@@ -34,7 +35,7 @@ http {
         {{- range .Domains }}
         {{- if .HttpEnabled }}
         server {
-                server_name {{ .Name }} *.{{ .Name }};
+                server_name {{ .Name }};
                 location / {
                         proxy_pass http://{{ .IP }}:80;
                         proxy_set_header Host $host;
