Update the healthcheck setup

--- a/nginxTemplate.tmpl
+++ b/nginxTemplate.tmpl
@@ -36,7 +36,7 @@ http {
             listen 7070;
 
             location /healthz {
-                allow {{ .HealthcheckAllowedIp }}
+                allow {{ .HealthcheckAllowedIp }};
                 deny all;
                 access_log off;
                 return 200 'ok';
