--- a/nginxTemplate.tmpl
+++ b/nginxTemplate.tmpl
@@ -5,6 +5,7 @@ events {
         worker_connections  1024;
 }
 
+{{- if .Domains }}
 stream {
         {{- range .Domains }}
         {{- if .HttpEnabled }}
@@ -25,6 +26,7 @@ stream {
                 ssl_preread on;
         }
 }
+{{- end }}
 
 http {
         map $http_upgrade $connection_upgrade {
