--- a/nginxTemplate.tmpl
+++ b/nginxTemplate.tmpl
@@ -2,63 +2,74 @@ load_module /usr/lib/nginx/modules/ngx_stream_module.so;
 worker_processes  1;
 
 events {
-        worker_connections  1024;
+    worker_connections  1024;
 }
 
 {{- if .Domains }}
 stream {
-        {{- range .Domains }}
-        {{- if .HttpEnabled }}
-        map $ssl_preread_server_name $name {
-                {{ .Name }} {{ .ContainerName }};
-        }
-        {{- end }}
-        {{- if .HttpsEnabled }}
-        upstream {{ .ContainerName }} {
-                server {{ .Ip }}:443;
-        }
-        {{- end }}
-        {{- end }}
+    {{- $uniqueContainers := dict }}
+    {{- range .Domains }}
+    {{- if .HttpsEnabled }}
+    {{- if not (index $uniqueContainers .ContainerName) }}
+    {{- $_ := set $uniqueContainers .ContainerName true }}
+    map $ssl_preread_server_name $name {
+        {{ .Name }} {{ .ContainerName }};
+    }
+    {{- end }}
+    {{- end }}
+    {{- end }}
 
-        server {
-                listen 443;
-                proxy_pass $name;
-                ssl_preread on;
-        }
+    {{- $uniqueUpstreams := dict }}
+    {{- range .Domains }}
+    {{- if .HttpsEnabled }}
+    {{- if not (index $uniqueUpstreams .ContainerName) }}
+    {{- $_ := set $uniqueUpstreams .ContainerName true }}
+    upstream {{ .ContainerName }} {
+        server {{ .Ip }}:443;
+    }
+    {{- end }}
+    {{- end }}
+    {{- end }}
+
+    server {
+        listen 443;
+        proxy_pass $name;
+        ssl_preread on;
+    }
 }
 {{- end }}
 
 http {
-        map $http_upgrade $connection_upgrade {
-                default                 upgrade;
-                ''                      close;
-        }
+    map $http_upgrade $connection_upgrade {
+        default                 upgrade;
+        ''                      close;
+    }
 
-        server {
-            listen 7070;
+    server {
+        listen 7070;
 
-            location /healthz {
-                access_log off;
-                return 200 'ok';
-                add_header Content-Type text/plain;
-            }
+        location /healthz {
+            access_log off;
+            return 200 'ok';
+            add_header Content-Type text/plain;
         }
+    }
 
-        {{- range .Domains }}
-        {{- if .HttpEnabled }}
-        server {
-                server_name {{ .Name }};
-                location / {
-                        proxy_pass http://{{ .Ip }}:80;
-                        proxy_set_header Host $host;
-                        proxy_set_header X-Forwarded_For $proxy_add_x_forwarded_for;
-                        {{- if .HttpWebsocketsEnabled }}
-                        proxy_http_version  1.1;
-                        proxy_set_header    Upgrade $http_upgrade;
-                        proxy_set_header    Connection $connection_upgrade;
-                        {{- end }}
-                }
+    {{- range .Domains }}
+    {{- if .HttpEnabled }}
+    server {
+        server_name {{ .Name }};
+        location / {
+            proxy_pass http://{{ .Ip }}:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded_For $proxy_add_x_forwarded_for;
+            {{- if .HttpWebsocketsEnabled }}
+            proxy_http_version  1.1;
+            proxy_set_header    Upgrade $http_upgrade;
+            proxy_set_header    Connection $connection_upgrade;
+            {{- end }}
         }
-        {{- end }}
-        {{- end }}
+    }
+    {{- end }}
+    {{- end }}
 }
