Fix duplicate upstreams (#3)
* fix duplicate upstreams

* Add the dev setup

* Update the dev setup

* fix duplicate upstreams

---------

Co-authored-by: A.Hoffa <60316298+anhoffa@users.noreply.github.com>

--- a/nginxTemplate.tmpl
+++ b/nginxTemplate.tmpl
@@ -7,17 +7,18 @@ events {
 
 {{- if .Domains }}
 stream {
-        {{- range .Domains }}
-        {{- if .HttpEnabled }}
+
         map $ssl_preread_server_name $name {
+                {{- range .Domains }}
+                {{- if .HttpsEnabled }}
                 {{ .Name }} {{ .ContainerName }};
+                {{- end }}
+                {{- end }}
         }
-        {{- end }}
-        {{- if .HttpsEnabled }}
+        {{- range .Containers }}
         upstream {{ .ContainerName }} {
                 server {{ .Ip }}:443;
         }
-        {{- end }}
         {{- end }}
 
         server {
